--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,6 @@
 html, body{
   font-family: "Inter", serif;
   background-color: #23252C;
-  max-height: 100vh;
 }
 
 /* Typography */
@@ -130,6 +129,7 @@ button:focus{
   width: 100%;
   display: flex;
   padding: 1.21875em 4.5625em;
+  margin-bottom: 2em;
   gap: 1.25em;
 }
 
